syntax = "proto3";

package net;
option go_package = "./;net";

message BroadcastParam {
	uint32 Type = 1;
	uint32 NeighborCount = 2;
	uint32 StopTimes = 3;
	uint32 HopLimit = 4;
	uint64 LayerLeft = 5;
	uint64 LayerRight = 6;
	float Overlap = 7;
	uint32 HopToLayer = 8;
	bytes Header = 9;
	bytes Body = 10;
	bool NetCrossed = 11;
	repeated uint64 Bloomfilter = 12;
	float EvilRate = 13;
	uint32 IgnBloomfilterHop = 14;
}

message Header {
	bytes SrcDhtKey = 1;
	bytes DesDhtKey = 2;
	bytes SrcNodeId = 3;
	bytes DesNodeId = 4;
	uint32 HopCount = 5;
	bytes Data = 6;
	uint32 Priority = 7;
	bytes Debug = 8;
	bytes FromIp = 9;  // will clear before transport send, not use
	uint32 FromPort = 10;  // will clear before transport send, not use
	bytes ToIp = 11;  // will clear before transport send, not use
	uint32 ToPort = 12;  // will clear before transport send, not use
	uint32 Id = 13;
	uint64 Hash = 14;
	uint32 Type = 15;
	bool Client = 16;
	bool ClientRelayed =  17;
	bool ClientProxy = 18;  // for local node to handle client message and direct send back
	bytes ClientDhtKey = 19;
	bool ClientHandled = 20;
	bool Universal = 21;
	BroadcastParam Broadcast = 22;
	bool Handled = 23;
	uint64 DesDhtKeyHash = 24;
	bytes Pubkey = 25;
	bytes Sign = 26;
	bool Local = 27;
	int32 DesNetwork = 28;
	bytes DesCountry = 29;
	int32 TransportType = 30;
	int32 Version = 31;
	repeated uint64 Timestamps = 32;
	uint32 ThreadIdx = 33;
}